<resources>
    <string name="app_name">My Tasks</string>
    <string name="titulo_minhas_tarefas">Minhas Tarefas</string>


    <string name="teste_view_model">Clicou %d vezes teste view model </string>


    <string name="texto_tarefa_adicionada_com_sucesso">%1$s adiciona com sucesso!</string>

    <!--  TarefasDetalhesActivity  -->
    <string name="titulo_tarefa">Tarefa</string>
    <string name="titulo_observacoes">Observações:</string>
    <string name="titulo_detalhe_tarefas">Tarefa Detalhada</string>
    <string name="titulo_adicao">Adicionar Tarefa</string>
    <string name="texto_botao_adicionar">Adicionar</string>
    <string name="texto_botao_cancelar">Cancelar</string>
    <string name="texto_switch_concluida">"Concluída "</string>
    <string name="title_activity_teste_fragments">TesteFragmentsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_title">buscar</string>

    <!--  Opções do MENU ActionBar  -->
    <string name="action_pesquisa">Pesquisar</string>
    <string name="action_nova_tarefa">Exibir ou Ocultar tarefas concluídas</string>
    <string name="action_info">Info</string>
    <string name="action_hint_pesquisa">Procurar por Tarefa</string>

    <!--  AdicionarTarefasActivity  -->
    <string name="hint_titulo_tarefa">Titulo</string>
    <string name="hint_descricao">Descricão</string>
    <string name="hint_comentario">Comentário...</string>
    <string name="texto_titulo_adicionar_tarefa">Adicionar tarefa</string>
    <string name="acessibilidade_texto_excluir_tarefa">Excluir tarefa</string>

</resources>
