<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cl_adicionar_tarefa"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="18dp"
    android:paddingTop="10dp"
    android:paddingBottom="42dp"
    android:background="@drawable/bg_arredondado"
    android:elevation="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_titulo_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/texto_titulo_adicionar_tarefa"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/MeuInputTextLayout"
        android:id="@+id/til_tituloTarefa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_tituloTarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_titulo_tarefa"
            android:imeOptions="actionNext"
            android:inputType="textPersonName|textCapWords"
            android:maxLength="25"
            tools:ignore="LabelFor"
            android:textAlignment="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/MeuInputTextLayout"
        android:id="@+id/til_descricaoTarefa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="60"
        app:layout_constraintTop_toBottomOf="@+id/til_tituloTarefa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_descricaoTarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_descricao"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLength="60"
            tools:ignore="LabelFor"
            android:textAlignment="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/MeuInputTextLayout"
        android:id="@+id/til_comentarioTarefa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="120"
        app:layout_constraintTop_toBottomOf="@+id/til_descricaoTarefa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_comentarioTarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_comentario"
            android:nextFocusDown="@id/btn_adicionar"
            android:inputType="textPersonName"
            android:maxLength="120"
            tools:ignore="LabelFor"
            android:textAlignment="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_adicionar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.38"
        android:background="@drawable/ic_check_circle_green"
        android:elevation="5dp"
        android:enabled="false"
        android:gravity="clip_horizontal"
        app:layout_constraintEnd_toStartOf="@id/btn_cancelar"
        app:layout_constraintTop_toBottomOf="@+id/til_comentarioTarefa" />

    <Button
        android:id="@+id/btn_cancelar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/ic_cancel_circle"
        android:contentDescription="@string/acessibilidade_texto_excluir_tarefa"
        android:elevation="5dp"
        android:gravity="clip_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_comentarioTarefa" />

</androidx.constraintlayout.widget.ConstraintLayout>